Refactors to SpringSecurityConfiguration.